# uv-monorepo

./: .env.example  .gitignore  RULES.md  SETUP.md  monorepo-setup-plan.md  pyproject.toml
infra/: docker-compose.yml
services/agents/: pyproject.toml
services/api/: pyproject.toml
services/api/app/: main.py
services/api/app/graphql/: schema.py
services/webhooks/: main.py  pyproject.toml
services/workers/: pyproject.toml
