[project]
name = "workers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "celery[redis]>=5.6.2",
    "cron-descriptor>=2.0.6",
    "fastapi-mail>=1.6.2",
    "flower>=2.0.1",
    "jinja2>=3.1.6",
    "shared",
]

[tool.uv.sources]
shared = { workspace = true, editable = true }
